--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -213,7 +213,7 @@ jobs:
           -H "X-GitHub-Api-Version: 2022-11-28" \
           https://api.github.com/repos/GEOS-DEV/GEOS/actions/workflows/test_geospythonpackages_integration.yml/dispatches \
           -d '{
-            "ref": "develop",
+            "ref": "${{ steps.pr_info.outputs.pr_branch }}",
             "inputs": {
               "python_package_repo": "${{ steps.pr_info.outputs.pr_repo }}",
               "python_package_branch": "${{ steps.pr_info.outputs.pr_branch }}",
