--- a/geos-posp/pyproject.toml
+++ b/geos-posp/pyproject.toml
@@ -15,7 +15,9 @@ name = "geos-posp"
 version = "1.0.0"
 description = "The Python package geos-posp is dedicated to post-process data from the geos simulation tool."
 authors = [{name = "GEOS Contributors" }]
-maintainers = [{name = "Martin Lemay", email = "martin.lemay@external.totalenergies.com"}]
+maintainers = [{name = "Alexandre Benedicto", email = "alexandre.benedicto@external.totalenergies.com" },
+               {name = "Romain Baville", email = "romain.baville@external.totalenergies.com" },
+               {name = "Paloma Martinez", email = "paloma.martinez@external.totalenergies.com" }]
 license = {text = "Apache-2.0"}
 classifiers = [
     "Intended Audience :: Developers",
