--- a/geos-mesh/pyproject.toml
+++ b/geos-mesh/pyproject.toml
@@ -15,7 +15,10 @@ name = "geos-mesh"
 version = "0.0.1"
 description = "GEOS mesh tools"
 authors = [{name = "GEOS Contributors" }]
-maintainers = [{name = "Christopher Sherman", email = "sherman27@llnl.gov"}]
+maintainers = [{name = "Alexandre Benedicto", email = "alexandre.benedicto@external.totalenergies.com" },
+               {name = "Romain Baville", email = "romain.baville@external.totalenergies.com" },
+               {name = "Paloma Martinez", email = "paloma.martinez@external.totalenergies.com" },
+               {name = "Christopher Sherman", email = "sherman27@llnl.gov"}]
 license = {text = "LGPL-2.1"}
 classifiers = [
   "Development Status :: 4 - Beta",
