--- a/geos-pv/pyproject.toml
+++ b/geos-pv/pyproject.toml
@@ -7,7 +7,9 @@ name = "geos-pv"
 version = "0.1.0"
 description = "geos-pv is a Python package that gathers Paraview plugins and dedicated utils to process and visualize GEOS inputs and outputs."
 authors = [{name = "GEOS Contributors" }]
-maintainers = [{name = "Martin Lemay", email = "martin.lemay@external.totalenergies.com"}]
+maintainers = [{name = "Alexandre Benedicto", email = "alexandre.benedicto@external.totalenergies.com" },
+               {name = "Romain Baville", email = "romain.baville@external.totalenergies.com" },
+               {name = "Paloma Martinez", email = "paloma.martinez@external.totalenergies.com" }]
 license = {text = "Apache-2.0"}
 classifiers = [
   "Development Status :: 4 - Beta",
