--- a/geos-xml-tools/pyproject.toml
+++ b/geos-xml-tools/pyproject.toml
@@ -6,9 +6,9 @@ build-backend = "setuptools.build_meta"
 name = "geos-xml-tools"
 version = "0.6.0"
 description = "Tools for enabling advanced xml features in GEOSX"
-maintainers = [
-    {name = "Christopher Sherman", email = "sherman27@llnl.gov" }
-]
+authors = [{name = "GEOS Contributors" }]
+maintainers = [{name = "Alexandre Benedicto", email = "alexandre.benedicto@external.totalenergies.com" },
+               {name = "Christopher Sherman", email = "sherman27@llnl.gov"}]
 license = {text = "LGPL-2.1"}
 
 requires-python = ">=3.8"
