--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -206,24 +206,95 @@ jobs:
         echo "GEOS integration label found ✅"
         echo "Now triggering GEOS integration test workflow..."
         
+        # Determine which GEOS branch contains the workflow file
+        # Priority: 1) ci/benedicto/testGeosPythonPackagesIntegration (current dev branch)
+        #           2) develop (main branch)
+        #           3) main (fallback)
+        GEOS_BRANCH="ci/benedicto/testGeosPythonPackagesIntegration"
+        
+        # Check if workflow exists on the target branch
+        echo "Checking if workflow exists on branch: ${GEOS_BRANCH}"
+        workflow_check=$(curl -fsSL \
+          -H "Accept: application/vnd.github+json" \
+          -H "Authorization: Bearer ${{ secrets.GEOS_INTEGRATION_TOKEN }}" \
+          https://api.github.com/repos/GEOS-DEV/GEOS/contents/.github/workflows/test_geospythonpackages_integration.yml?ref=${GEOS_BRANCH} 2>/dev/null || echo "not_found")
+        
+        if [[ "$workflow_check" == "not_found" ]]; then
+          echo "Workflow not found on ${GEOS_BRANCH}, trying develop branch..."
+          GEOS_BRANCH="develop"
+          workflow_check=$(curl -fsSL \
+            -H "Accept: application/vnd.github+json" \
+            -H "Authorization: Bearer ${{ secrets.GEOS_INTEGRATION_TOKEN }}" \
+            https://api.github.com/repos/GEOS-DEV/GEOS/contents/.github/workflows/test_geospythonpackages_integration.yml?ref=${GEOS_BRANCH} 2>/dev/null || echo "not_found")
+          
+          if [[ "$workflow_check" == "not_found" ]]; then
+            echo "❌ ERROR: Workflow file not found on develop branch either!"
+            echo "This could indicate a permissions issue with GEOS_INTEGRATION_TOKEN"
+            echo "Please verify the token has proper repository access"
+            exit 1
+          fi
+        fi
+        
+        echo "✅ Found workflow on branch: ${GEOS_BRANCH}"
+        
+        # Test the dispatch endpoint first
+        echo "Testing workflow dispatch endpoint access..."
+        dispatch_test=$(curl -fsSL \
+          -H "Accept: application/vnd.github+json" \
+          -H "Authorization: Bearer ${{ secrets.GEOS_INTEGRATION_TOKEN }}" \
+          "https://api.github.com/repos/GEOS-DEV/GEOS/actions/workflows/test_geospythonpackages_integration.yml" 2>&1 || echo "endpoint_error")
+        
+        if [[ "$dispatch_test" == "endpoint_error" ]]; then
+          echo "❌ ERROR: Cannot access workflow dispatch endpoint"
+          echo "This suggests the GEOS_INTEGRATION_TOKEN lacks 'actions:write' permission"
+          exit 1
+        fi
+        
+        echo "✅ Workflow dispatch endpoint accessible"
+        
         # Trigger the workflow_dispatch event in the GEOS repository
+        # Note: ref should point to a branch that contains the workflow file
+        # The python package branch info is passed as inputs
+        echo "Triggering workflow dispatch on GEOS repository..."
+        echo "Target branch: ${GEOS_BRANCH}"
+        echo "Python package repo: ${{ steps.pr_info.outputs.pr_repo }}"
+        echo "Python package branch: ${{ steps.pr_info.outputs.pr_branch }}"
+        
         response=$(curl -fsS -X POST \
           -H "Accept: application/vnd.github+json" \
           -H "Authorization: Bearer ${{ secrets.GEOS_INTEGRATION_TOKEN }}" \
           -H "X-GitHub-Api-Version: 2022-11-28" \
           https://api.github.com/repos/GEOS-DEV/GEOS/actions/workflows/test_geospythonpackages_integration.yml/dispatches \
-          -d '{
-            "ref": "${{ steps.pr_info.outputs.pr_branch }}",
-            "inputs": {
-              "python_package_repo": "${{ steps.pr_info.outputs.pr_repo }}",
-              "python_package_branch": "${{ steps.pr_info.outputs.pr_branch }}",
-              "python_package_pr": "${{ github.event.number }}",
-              "requested_by": "${{ github.actor }}"
+          -d "{
+            \"ref\": \"${GEOS_BRANCH}\",
+            \"inputs\": {
+              \"python_package_repo\": \"${{ steps.pr_info.outputs.pr_repo }}\",
+              \"python_package_branch\": \"${{ steps.pr_info.outputs.pr_branch }}\",
+              \"python_package_pr\": \"${{ github.event.number }}\",
+              \"requested_by\": \"${{ github.actor }}\"
             }
-          }')
+          }" 2>&1)
+        
+        # Check if the response indicates an error
+        if [[ $? -ne 0 ]]; then
+          echo "❌ ERROR: Workflow dispatch failed!"
+          echo "Response: $response"
+          echo ""
+          echo "Common causes:"
+          echo "1. GEOS_INTEGRATION_TOKEN missing or invalid"
+          echo "2. Token lacks 'actions:write' permission"
+          echo "3. Token lacks access to GEOS-DEV/GEOS repository" 
+          echo "4. Workflow file name mismatch"
+          echo ""
+          echo "Please verify:"
+          echo "- The secret GEOS_INTEGRATION_TOKEN is set in geosPythonPackages repository"
+          echo "- The token has 'actions:write' and 'repo' permissions"
+          echo "- The token can access GEOS-DEV/GEOS repository"
+          exit 1
+        fi
         
         echo "Workflow dispatch response: $response"
-        echo "✅ GEOS integration test workflow triggered successfully"
+        echo "✅ GEOS integration test workflow triggered successfully on branch: ${GEOS_BRANCH}"
         
         # Wait a moment for the workflow to start, then find the run ID
         sleep 10
