--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -260,41 +260,46 @@ jobs:
         echo "Python package repo: ${{ steps.pr_info.outputs.pr_repo }}"
         echo "Python package branch: ${{ steps.pr_info.outputs.pr_branch }}"
         
-        response=$(curl -fsS -X POST \
+        # Make the request with detailed error reporting
+        echo "Making workflow dispatch request..."
+        http_code=$(curl -w "%{http_code}" -o /tmp/dispatch_response.txt \
+          -X POST \
           -H "Accept: application/vnd.github+json" \
           -H "Authorization: Bearer ${{ secrets.GEOS_INTEGRATION_TOKEN }}" \
           -H "X-GitHub-Api-Version: 2022-11-28" \
           https://api.github.com/repos/GEOS-DEV/GEOS/actions/workflows/test_geospythonpackages_integration.yml/dispatches \
-          -d "{
-            \"ref\": \"${GEOS_BRANCH}\",
-            \"inputs\": {
-              \"python_package_repo\": \"${{ steps.pr_info.outputs.pr_repo }}\",
-              \"python_package_branch\": \"${{ steps.pr_info.outputs.pr_branch }}\",
-              \"python_package_pr\": \"${{ github.event.number }}\",
-              \"requested_by\": \"${{ github.actor }}\"
-            }
-          }" 2>&1)
+          -d "{\"ref\": \"${GEOS_BRANCH}\", \"inputs\": {\"python_package_repo\": \"${{ steps.pr_info.outputs.pr_repo }}\", \"python_package_branch\": \"${{ steps.pr_info.outputs.pr_branch }}\", \"python_package_pr\": \"${{ github.event.number }}\", \"requested_by\": \"${{ github.actor }}\"}}")
         
-        # Check if the response indicates an error
-        if [[ $? -ne 0 ]]; then
-          echo "❌ ERROR: Workflow dispatch failed!"
-          echo "Response: $response"
-          echo ""
-          echo "Common causes:"
-          echo "1. GEOS_INTEGRATION_TOKEN missing or invalid"
-          echo "2. Token lacks 'actions:write' permission"
-          echo "3. Token lacks access to GEOS-DEV/GEOS repository" 
-          echo "4. Workflow file name mismatch"
-          echo ""
-          echo "Please verify:"
-          echo "- The secret GEOS_INTEGRATION_TOKEN is set in geosPythonPackages repository"
-          echo "- The token has 'actions:write' and 'repo' permissions"
-          echo "- The token can access GEOS-DEV/GEOS repository"
+        echo "HTTP response code: $http_code"
+        echo "Response body:"
+        cat /tmp/dispatch_response.txt
+        
+        # Check the HTTP response code
+        if [[ "$http_code" -eq 204 ]]; then
+          echo "✅ GEOS integration test workflow triggered successfully on branch: ${GEOS_BRANCH}"
+        elif [[ "$http_code" -eq 404 ]]; then
+          echo "❌ ERROR: 404 Not Found"
+          echo "Possible causes:"
+          echo "1. Workflow file does not exist on branch ${GEOS_BRANCH}"
+          echo "2. GEOS_INTEGRATION_TOKEN lacks access to GEOS-DEV/GEOS repository"
+          echo "3. Token is invalid or expired"
+          exit 1
+        elif [[ "$http_code" -eq 403 ]]; then
+          echo "❌ ERROR: 403 Forbidden"
+          echo "GEOS_INTEGRATION_TOKEN lacks 'actions:write' permission"
+          echo "The token needs both 'repo' and 'actions:write' scopes"
+          exit 1
+        elif [[ "$http_code" -eq 422 ]]; then
+          echo "❌ ERROR: 422 Unprocessable Entity"
+          echo "Invalid input data or workflow configuration issue"
+          echo "Check that all required inputs are provided correctly"
+          exit 1
+        else
+          echo "❌ ERROR: Unexpected HTTP response code: $http_code"
+          echo "Response body:"
+          cat /tmp/dispatch_response.txt
           exit 1
         fi
-        
-        echo "Workflow dispatch response: $response"
-        echo "✅ GEOS integration test workflow triggered successfully on branch: ${GEOS_BRANCH}"
         
         # Wait a moment for the workflow to start, then find the run ID
         sleep 10
