--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -1,5 +1,7 @@
 name: geosPythonPackages CI 
-on: pull_request
+on: 
+  pull_request:
+    types: [opened, synchronize, reopened, labeled]
 
 # Cancels in-progress workflows for a PR when updated
 concurrency:
@@ -99,3 +101,73 @@ jobs:
       # python -m pytest ./${{ matrix.package-name }} --doctest-modules --junitxml=junit/test-results.xml --cov-report=xml --cov-report=html |
       # wrap pytest to avoid error when no tests in the package
         sh -c 'python -m pytest ./${{ matrix.package-name }}; ret=$?; [ $ret = 5 ] && exit 0 || exit $ret'
+
+  # Step 3: Check if GEOS integration label is present - FAIL if present but GEOS integration doesn't run
+  check_geos_integration_required:
+    name: Check GEOS Integration Required
+    runs-on: ubuntu-latest
+    needs: [semantic_pull_request, build]
+    if: github.event_name == 'pull_request'
+    outputs:
+      geos_integration_required: ${{ steps.check_label.outputs.required }}
+    steps:
+    - name: Check for test-geos-integration label
+      id: check_label
+      run: |
+        echo "Checking for mandatory test-geos-integration label..."
+        
+        # Check if the PR has the required label
+        HAS_LABEL=$(echo '${{ toJson(github.event.pull_request.labels.*.name) }}' | grep -q "test-geos-integration" && echo "true" || echo "false")
+        
+        if [[ "$HAS_LABEL" == "true" ]]; then
+          echo "Label 'test-geos-integration' found"
+          echo "GEOS integration test will now run"
+          echo "required=true" >> "$GITHUB_OUTPUT"
+        else
+          echo "Label 'test-geos-integration' NOT found"
+          echo "This label is mandatory for ALL PRs"
+          echo "Please add the 'test-geos-integration' label to trigger GEOS integration tests"
+          echo "PR cannot be merged without this label and passing GEOS integration tests"
+          echo "required=false" >> "$GITHUB_OUTPUT"
+        fi
+
+  # Step 4: Run GEOS integration tests (mandatory if label present)
+  geos_integration_test:
+    name: GEOS Integration Test
+    needs: [check_geos_integration_required]
+    if: needs.check_geos_integration_required.outputs.geos_integration_required == 'true'
+    uses: ./.github/workflows/test_geos_integration.yml
+
+  # Final validation - FAIL if GEOS integration was required but didn't pass
+  final_validation:
+    name: Final CI Validation
+    runs-on: ubuntu-latest
+    needs: [check_geos_integration_required, geos_integration_test]
+    if: always() && github.event_name == 'pull_request'
+    steps:
+    - name: Validate CI completion
+      run: |
+        echo "Final CI Validation"
+        echo "==================="
+        
+        GEOS_REQUIRED="${{ needs.check_geos_integration_required.outputs.geos_integration_required }}"
+        GEOS_RESULT="${{ needs.geos_integration_test.result }}"
+        
+        if [[ "$GEOS_REQUIRED" == "true" ]]; then
+          echo "GEOS integration test was triggered"
+          if [[ "$GEOS_RESULT" == "success" ]]; then
+            echo "GEOS integration test PASSED"
+            echo "All CI requirements satisfied - PR can be merged"
+          else
+            echo "GEOS integration test FAILED or was skipped"
+            echo "CI FAILED - PR cannot be merged until GEOS integration passes"
+            exit 1
+          fi
+        else
+          echo "GEOS integration test was NOT triggered"
+          echo "Label 'test-geos-integration' is MANDATORY for ALL PRs"
+          echo "Add the label to trigger GEOS integration tests"
+          echo "CI FAILED - PR cannot be merged without GEOS integration testing"
+          exit 1
+        fi
+
