Change test condition

--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -1,7 +1,5 @@
 name: geosPythonPackages CI 
-on: 
-  pull_request:
-    types: [opened, synchronize, reopened, labeled]
+on: pull_request
 
 # Cancels in-progress workflows for a PR when updated
 concurrency:
