--- a/.github/workflows/test_geos_integration.yml
+++ b/.github/workflows/test_geos_integration.yml
@@ -34,7 +34,49 @@ jobs:
     - name: Install system dependencies
       run: |
         sudo apt-get update
-        sudo apt-get install -y cmake build-essential
+        sudo apt-get install -y \
+          cmake \
+          build-essential \
+          gfortran \
+          libopenmpi-dev \
+          libhdf5-dev \
+          libhdf5-mpi-dev \
+          libblas-dev \
+          liblapack-dev \
+          python3-dev \
+          python3-pip \
+          pkg-config \
+          git \
+          wget \
+          curl
+        
+        # Install Python packages that GEOS might need
+        pip install numpy scipy matplotlib h5py
+    
+    - name: Install geosPythonPackages dependencies
+      run: |
+        cd geosPythonPackages
+        
+        # Install geosPythonPackages in development mode
+        echo "Installing geosPythonPackages dependencies..."
+        if [ -f "docs/requirements.txt" ]; then
+          pip install -r docs/requirements.txt
+        fi
+        
+        # Install packages from each subpackage if they have setup.py or pyproject.toml
+        for pkg_dir in geos-*; do
+          if [ -d "$pkg_dir" ]; then
+            echo "Checking $pkg_dir for installable package..."
+            cd "$pkg_dir"
+            
+            if [ -f "pyproject.toml" ]; then
+              echo "Installing $pkg_dir in development mode..."
+              pip install -e . || echo "Warning: Could not install $pkg_dir"
+            fi
+            
+            cd ..
+          fi
+        done
     
     - name: Test GEOS integration
       run: |
@@ -45,59 +87,87 @@ jobs:
         # Set up paths
         export GEOS_ROOT="$(pwd)/GEOS"
         export GEOSPYTHONPACKAGES_ROOT="$(pwd)/geosPythonPackages"
+        export SOURCE_DIR="$GEOS_ROOT/src"
+        export CMAKE_LIST_PATH="$SOURCE_DIR/CMakeLists.txt"
+        export SETUP_PYTHON_ENVIRONMENT_SCRIPT="$GEOS_ROOT/scripts/setupPythonEnvironment.bash"
+        export CURRENT_GEOSPYTHONPACKAGES_BRANCH_NAME=${{ github.ref_name }}
         
         echo "Paths:"
         echo "   GEOS: $GEOS_ROOT"
         echo "   geosPythonPackages: $GEOSPYTHONPACKAGES_ROOT"
+        echo "   CMakeLists.txt: $CMAKE_LIST_PATH"
+        echo "   setupPythonEnvironment.bash: $SETUP_PYTHON_ENVIRONMENT_SCRIPT"
+        echo "   Current geosPythonPackages branch: $CURRENT_GEOSPYTHONPACKAGES_BRANCH_NAME"
         echo ""
         
         # Test Python environment setup
         echo "Testing Python environment setup..."
-        if [ -f "$GEOS_ROOT/scripts/setupPythonEnvironment.bash" ]; then
+        if [ -f "$SETUP_PYTHON_ENVIRONMENT_SCRIPT" ]; then
           echo "Found setupPythonEnvironment.bash"
-          # Test the script (dry run)
-          bash "$GEOS_ROOT/scripts/setupPythonEnvironment.bash" --help || echo "Script exists but may need arguments"
+          
+          # Test the script help output
+          echo "Testing script help functionality..."
+          if bash "$SETUP_PYTHON_ENVIRONMENT_SCRIPT" --help 2>&1 | head -10; then
+            echo "setupPythonEnvironment.bash is functional"
+          else
+            echo "setupPythonEnvironment.bash exists but help failed"
+            echo "Script may still be functional for integration"
+          fi
         else
           echo "setupPythonEnvironment.bash not found"
           exit 1
         fi
         echo ""
         
-        # Test CMake configuration for Python tools
-        echo "Testing CMake geosx_python_tools target..."
-        cd "$GEOS_ROOT"
+        # Check for GEOS CMakeLists.txt in src directory
+        if [ -f "$CMAKE_LIST_PATH" ]; then
+          echo "Found GEOS CMakeLists.txt in src/ directory"
+          echo ""
+        else
+          echo "CMakeLists.txt not found in expected location"
+          exit 1
+        fi
         
-        # Create a minimal build directory for testing
+        # Create a minimal build directory for testing CMake
+        echo "Creating test build directory..."
         mkdir -p build_test && cd build_test
         
-        # Configure with minimal options to test Python tools
-        echo "Configuring CMake with ENABLE_GEOSX_PYTHON_TOOLS=ON..."
-        cmake .. \
-          -DGEOSX_BUILD_SHARED_LIBS=OFF \
-          -DENABLE_GEOSX_PYTHON_TOOLS=ON \
-          -DGEOS_PYTHON_PACKAGES_SOURCE="${GEOSPYTHONPACKAGES_ROOT}" \
-          -DCMAKE_BUILD_TYPE=Release || {
-            echo "CMake configuration failed"
-            echo "This may be expected if dependencies are missing"
-            echo "Continuing with basic structure tests..."
-        }
+        echo "Using source directory: $SOURCE_DIR"
         
-        # Test if the Python tools target exists
-        if make help | grep -q geosx_python_tools; then
-          echo "Found 'make geosx_python_tools' target"
+        # CMake configuration must succeed for a proper integration test
+        echo "Configuring GEOS with Python tools enabled..."
+        if cmake "$SOURCE_DIR" \
+          -DCMAKE_BUILD_TYPE=Release \
+          -DGEOS_PYTHON_PACKAGES_BRANCH="$CURRENT_GEOSPYTHONPACKAGES_BRANCH_NAME"; then
           
-          # Attempt to build Python tools (may fail due to missing dependencies)
-          echo "Attempting to build geosx_python_tools..."
-          if make geosx_python_tools -j2; then
-            echo "geosx_python_tools built successfully!"
+          echo "CMake configuration succeeded!"
+          
+          # Verify the Python tools target exists
+          echo "Checking for geosx_python_tools target..."
+          if make help 2>/dev/null | grep -q geosx_python_tools; then
+            echo "Found 'make geosx_python_tools' target"
+            
+            # Build Python tools
+            echo "Building geosx_python_tools..."
+            if make geosx_python_tools -j2; then
+              echo "geosx_python_tools built successfully!"
+              echo "GEOS integration with Python tools is working!"
+            else
+              echo "geosx_python_tools build failed"
+              echo "Integration test FAILED - Python tools must build successfully"
+              exit 1
+            fi
           else
-            echo "geosx_python_tools build failed (may be due to missing dependencies)"
+            echo "'make geosx_python_tools' target not found"
+            echo "Available targets:"
+            make help 2>/dev/null | head -10 || echo "No make targets available"
+            echo "Integration test FAILED - Python tools target must be available"
             exit 1
           fi
         else
-          echo "'make geosx_python_tools' target not found"
-          echo "Available targets:"
-          make help | head -10
+          echo "CMake configuration failed"
+          echo "Integration test FAILED - CMake configuration with Python tools must succeed"
+          echo "Check the CMake output above for dependency issues"
           exit 1
         fi
         
