--- a/.github/workflows/test_geos_integration.yml
+++ b/.github/workflows/test_geos_integration.yml
@@ -25,7 +25,12 @@ jobs:
         ref: develop
         path: GEOS
         submodules: recursive
-    
+
+    - name: Install Build Dependencies
+      run: |
+        apt-get update
+        apt-get install -y make
+
     - name: Setup test environment
       run: |
         echo "Setting up test environment..."
