--- a/.github/workflows/test_geos_integration.yml
+++ b/.github/workflows/test_geos_integration.yml
@@ -5,12 +5,33 @@ on:
   workflow_dispatch:
 
 jobs:
+  setup:
+    # need to dynamically determine the GEOS TPL tag from the GEOS repository
+    name: Determine GEOS TPL Tag
+    runs-on: ubuntu-latest
+    outputs:
+      tag: ${{ steps.get_tag.outputs.tag }}
+    steps:
+      - name: Checkout GEOS for devcontainer file
+        uses: actions/checkout@v4
+        with:
+          repository: GEOS-DEV/GEOS
+          ref: develop
+          path: GEOS
+
+      - name: Extract TPL tag from devcontainer.json
+        id: get_tag
+        run: |
+          TPL_TAG=$(jq -r '.build.args.GEOS_TPL_TAG' GEOS/.devcontainer/devcontainer.json)
+          echo "tag=${TPL_TAG}" >> $GITHUB_OUTPUT
+
   test_geos_integration:
     name: Test geosPythonPackages Integration with GEOS
     runs-on: ubuntu-latest
+    needs: setup
     
-    container:
-      image: geosx/ubuntu20.04-gcc9:320-766
+    container: 
+      image: geosx/ubuntu22.04-gcc12:${{ needs.setup.outputs.tag }}
 
     steps:
     - name: Checkout geosPythonPackages
@@ -30,7 +51,7 @@ jobs:
       run: |
         apt-get update
         apt-get install -y make
-
+    
     - name: Setup test environment
       run: |
         echo "Setting up test environment..."
@@ -61,7 +82,15 @@ jobs:
           -bt Release \
           -bp ../build_test \
           -DENABLE_HYPRE=ON \
-          -DENABLE_TRILINOS=OFF
+          -DENABLE_TRILINOS=OFF \
+          -DGEOS_ENABLE_CONTACT=OFF \
+          -DGEOS_ENABLE_FLUIDFLOW=OFF \
+          -DGEOS_ENABLE_INDUCEDSEISMICITY=OFF \
+          -DGEOS_ENABLE_MULTIPHYSICS=OFF \
+          -DGEOS_ENABLE_SIMPLEPDE=OFF \
+          -DGEOS_ENABLE_SOLIDMECHANICS=OFF \
+          -DGEOS_ENABLE_SURFACEGENERATION=OFF \
+          -DGEOS_ENABLE_WAVEPROPAGATION=OFF
 
     - name: "Build GEOS"
       working-directory: ./build_test
