--- a/.github/workflows/test_geos_integration.yml
+++ b/.github/workflows/test_geos_integration.yml
@@ -50,7 +50,7 @@ jobs:
     - name: Install Build Dependencies
       run: |
         apt-get update
-        apt-get install -y make
+        apt-get install -y make python3-numpy python3-dev
     
     - name: Setup test environment
       run: |
