Add more conditions for build config

--- a/.github/workflows/test_geos_integration.yml
+++ b/.github/workflows/test_geos_integration.yml
@@ -83,18 +83,23 @@ jobs:
           -bp ../build_test \
           -DENABLE_HYPRE=ON \
           -DENABLE_PYGEOSX=ON \
-          -DENABLE_TRILINOS=OFF \
+          -DENABLE_ATS=OFF \
           -DENABLE_BENCHMARKS=OFF \
+          -DENABLE_DOCS=OFF \
           -DENABLE_DOXYGEN=OFF \
           -DENABLE_MATHPRESSO=OFF \
+          -DENABLE_PVTPackage=OFF \
+          -DENABLE_TRILINOS=OFF \
           -DENABLE_UNCRUSTIFY=OFF \
+          -DENABLE_YAPF=OFF \
           -DGEOS_ENABLE_CONTACT=OFF \
           -DGEOS_ENABLE_FLUIDFLOW=OFF \
           -DGEOS_ENABLE_INDUCEDSEISMICITY=OFF \
           -DGEOS_ENABLE_MULTIPHYSICS=OFF \
           -DGEOS_ENABLE_SIMPLEPDE=OFF \
           -DGEOS_ENABLE_SOLIDMECHANICS=OFF \
-          -DGEOS_ENABLE_SURFACEGENERATION=OFF
+          -DGEOS_ENABLE_SURFACEGENERATION=OFF \
+          -DGEOS_PYTHON_PACKAGES_BRANCH=$CURRENT_GEOSPYTHONPACKAGES_BRANCH_NAME
 
     - name: "Build GEOS"
       working-directory: ./build_test
