--- a/geos-mesh/pyproject.toml
+++ b/geos-mesh/pyproject.toml
@@ -39,7 +39,8 @@ dependencies = [
 ]
 
 [project.scripts]
-    mesh-doctor = "geos.mesh.doctor.mesh_doctor:main"
+    mesh-doctor = "geos.mesh.doctor.meshDoctor:main"
+    meshDoctor = "geos.mesh.doctor.meshDoctor:main"
     convert_abaqus = "geos.mesh.conversion.main:main"
     
 [project.urls]
